--- a/_posts/2012-02-03-automatic-testing-in-javascript.textile
+++ b/_posts/2012-02-03-automatic-testing-in-javascript.textile
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Automatic Regression Testing in Javascript
+title: Automatic Regression Testing in JavaScript
 post_date: 3 February, 2012 -- Menlo Park, CA
 ---
 
