--- a/_posts/2012-02-03-automatic-testing-in-javascript.textile
+++ b/_posts/2012-02-03-automatic-testing-in-javascript.textile
@@ -8,7 +8,7 @@ h1. {{ page.title | upcase }}
 
 p(meta). {{ page.post_date || upcase }}
 
-I don't like writing test cases, and at "Hirewolf":http://hirewolf.com I don't write them -- my browser does. I built a framework to automate our testing, and so to generate 800 test cases, I do this:
+I don't like writing test cases, and at "Proxino":http://proxino.com I don't write them -- my browser does. I built a framework to automate our testing, and so to generate 800 test cases, I do this:
 
 pre. AngelJS.testcases = 200
 // I want to test add_all, my_prop_is_true, fullname, 
